# quetzal-annotator

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: API.md
examples/: basic_usage.py  quick_start_1.py  quick_start_2.py  usi_validation_example.py
quetzal-annotator/: mass_reference.py  ontology.py  proforma_peptidoform.py  spectrum.py  spectrum_annotator.py  spectrum_annotator_helper.py  spectrum_cache.sqlite  spectrum_comparator.py  spectrum_examiner.py  unimod.obo  universal_spectrum_identifier_validator.py
src/quetzal-annotator/: ontology_collection.py  proforma_peptidoform.py  spectrum_annotator.py  spectrum_comparator.py  unimod.json  universal_spectrum_identifier_validator.py
src/quetzal_annotator/: __init__.py  ontology.py  psi-mod.obo  spectrum_annotator.py  spectrum_comparator.py  spectrum_fetcher.py  unimod.json  update_ontologies.txt
tests/: test_spectrum.py  test_universal_spectrum_identifier_validator.py
