[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quetzal_annotator"
version = "0.1.0"
description = "A tool for annotating peptide fragment ion mass spectrometra."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "requests",
    "requests_cache",
    "pandas",
    "scipy",
    "matplotlib"
]

[tool.setuptools.package-data]
quetzal_annotator = ["*.json"]

[project.urls]
"Homepage" = "https://github.com/Quetzal-Annotator/quetzal-annotator"
"Bug Tracker" = "https://github.com/Quetzal-Annotator/quetzal-annotator/issues"
