[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quetzal_annotator"
version = "0.1.0"
description = "A peptide spectrum fragment ion annotation tool using the PSI mzPAF standard"
readme = "README.md"
keywords = ["proteomics", "mass-spectrometry", "peptide", "annotation", "mzPAF", "PSI"]
license = "Apache-2.0"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "requests",
    "requests_cache",
    "pandas",
    "scipy",
    "matplotlib"
]

[tool.setuptools.package-data]
quetzal_annotator = ["*.json"]

[project.urls]
"Homepage" = "https://github.com/Quetzal-Annotator/quetzal-annotator"
"Bug Tracker" = "https://github.com/Quetzal-Annotator/quetzal-annotator/issues"
